# nb_uttale

./: .gitignore  LESMEG.md  README.md  config.py  generate.sh  lexupdater-0.7.5-py3-none-any.whl  newwords.csv  pyproject.toml
data/input/: exemptions_v1.py  rules_v1.py
